--- a/arrays/ej_9.html
+++ b/arrays/ej_9.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="ej_9.js"></script>
+    <script src="ej_9_prueba.js"></script>
 </body>
 </html>
