--- a/prueba_futbol/futbol.html
+++ b/prueba_futbol/futbol.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="futbol.js"></script>
+    <script src="futbol_V2.js"></script>
 </body>
 </html>
